test/compile_errors/stage1/test/export_with_empty_name_string.zig
pub export fn entry() void { }
comptime {
    @export(entry, .{ .name = "" });
}

// @export with empty name string
//
// tmp.zig:3:5: error: exported symbol name cannot be empty
